2007-09-20  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage.[ch]: added a load_proc member to GimpImage
	and getters and setters for it.

	* app/file/file-open.c (file_open_image): set the load procedure,
	but only if it hasn't been set already. Use the MIME type from the
	load procedure that is set on the image.

	* tools/pdbgen/pdb/fileops.pdb (file_load_invoker): set the load
	procedure. This causes it to be set when the URI plug-in calls
	gimp-file-load to load the image.

	* app/pdb/fileops_cmds.c: regenerated.

	* app/widgets/gimpimagepropview.c
	(gimp_image_prop_view_label_set_filetype): use the MIME type from
	the load procedure, in case that no save procedure is set.

2007-09-20  Sven Neumann  <sven@gimp.org>

	* app/gui/gui-vtable.c (gui_recent_list_add_uri): use
	"application/octet-stream" as MIME type in case that it is unset.

2007-09-20  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/jpeg/jpegqual.c (quant_info): updated the table of
	known devices and software, work in progress.

2007-09-20  Michael Natterer  <mitch@gimp.org>

	* menus/image-menu.xml.in: added placeholder Edit/Preferences and
	move the preferences and keyboard shortcut dialogs there.

	* plug-ins/common/uniteditor.c (query): register the unit editor
	there too.

2007-09-19  Sven Neumann  <sven@gimp.org>

	* app/base/gimphistogram.c: weight pixels by their alpha value
	(bug #477689).

2007-09-19  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/compose.c: removed extra arguments that were
	added to the compose procedures in the 2.3 development cycle.
	Restores compatibility and fixes bug #477795.

2007-09-19  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/jpeg/jpegqual.c: Re-wrote large parts of the code,
	still work in progress: use GOption for command-line options, add
	number of quantization tables in QuantInfo, added info for more
	sources (devices or software) but not verified yet.

2007-09-19  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/jpeg/jpeg-load.c